; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_dv.c_Raw1394Open.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_dv.c_Raw1394Open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw1394_portinfo = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"raw1394 - failed to get handle: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"raw1394 - failed to get port info: %s\00", align 1
@.str.2 = private unnamed_addr constant [37 x i8] c"raw1394 - failed to set set port: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @Raw1394Open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Raw1394Open(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [16 x %struct.raw1394_portinfo], align 16
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = call i32* (...) @raw1394_new_handle()
  store i32* %9, i32** %8, align 8
  %10 = load i32*, i32** %8, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %17, label %12

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @errno, align 4
  %15 = call i32 @vlc_strerror_c(i32 %14)
  %16 = call i32 @msg_Err(i32* %13, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %15)
  store i32* null, i32** %3, align 8
  br label %41

17:                                               ; preds = %2
  %18 = load i32*, i32** %8, align 8
  %19 = getelementptr inbounds [16 x %struct.raw1394_portinfo], [16 x %struct.raw1394_portinfo]* %7, i64 0, i64 0
  %20 = call i32 @raw1394_get_port_info(i32* %18, %struct.raw1394_portinfo* %19, i32 16)
  store i32 %20, i32* %6, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %17
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* @errno, align 4
  %25 = call i32 @vlc_strerror_c(i32 %24)
  %26 = call i32 @msg_Err(i32* %23, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i32 %25)
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @raw1394_destroy_handle(i32* %27)
  store i32* null, i32** %3, align 8
  br label %41

29:                                               ; preds = %17
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %5, align 4
  %32 = call i64 @raw1394_set_port(i32* %30, i32 %31)
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %39

34:                                               ; preds = %29
  %35 = load i32*, i32** %4, align 8
  %36 = load i32, i32* @errno, align 4
  %37 = call i32 @vlc_strerror_c(i32 %36)
  %38 = call i32 @msg_Err(i32* %35, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.2, i64 0, i64 0), i32 %37)
  store i32* null, i32** %3, align 8
  br label %41

39:                                               ; preds = %29
  %40 = load i32*, i32** %8, align 8
  store i32* %40, i32** %3, align 8
  br label %41

41:                                               ; preds = %39, %34, %22, %12
  %42 = load i32*, i32** %3, align 8
  ret i32* %42
}

declare dso_local i32* @raw1394_new_handle(...) #1

declare dso_local i32 @msg_Err(i32*, i8*, i32) #1

declare dso_local i32 @vlc_strerror_c(i32) #1

declare dso_local i32 @raw1394_get_port_info(i32*, %struct.raw1394_portinfo*, i32) #1

declare dso_local i32 @raw1394_destroy_handle(i32*) #1

declare dso_local i64 @raw1394_set_port(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
